--- a/app.json
+++ b/app.json
@@ -1,14 +1,14 @@
 {
-    "name": "Julie-Mwol",
-    "description": "Julie Mwol is the Modified Version of WhatsAsena, Made By @farhan-dqz with Baileys.",
-    "logo": "https://i.imgur.com/ADXSU8e.jpeg",
-    "keywords": ["whatsapp", "userbot", "julie", "WhatsAsena", "mwol", "bot", "ai"],
-    "repository": "https://github.com/farhan-dqz/Julie-Mwol",
-    "website":   "https://github.com/farhan-dqz/Julie-Mwol",
-    "success_url": "https://github.com/farhan-dqz/Julie-Mwol",
+    "name": "Catbot",
+    "description": "Catbot is the Modified Version of WhatsAsena, Made By @Basilser with Baileys.",
+    "logo": "https://i.imgur.com/54yVC4Q.jpg",
+    "keywords": ["whatsapp", "catbot", "userbot", "julie", "WhatsAsena", "mwol", "bot", "ai"],
+    "repository": "https://github.com/itsmebasil0/catbot",
+    "website":   "https://github.com/itsmebasil0/catbot",
+    "success_url": "https://github.com/itsmebasil0/catbot",
     "stack": "container",
     "env": {
-        "JULIE_SESSION": {
+        "CATBOT_SESSION": {
             "description": "Type here yours Asena Session.",
             "required": true
         },
@@ -123,7 +123,7 @@
         "BOT_NAME": {
             "description": "heading for .list command reply",
             "required": false,
-            "value": "•━━━━╼⤏JulieMWol⤎╾━━━•"
+            "value": "default"
         },
         "WORK_TYPE": {
             "description": "JulieMwol Working Type. If you use “public”, everyone can use the bot. Else if you use “private”, only you can use your bot.",
