--- a/app.json
+++ b/app.json
@@ -16,6 +16,10 @@
             "description": "Leave blank if you don't know how to use it! Sudo mode; Your number must be an international number. So you should have your number after the country code. Example: 91xxxxxxxxx,0",
             "required": false
         },
+        "OWNER_NUMBER": {
+            "description": "Your owner number give here",
+            "required": false
+        },
         "LANGUAGE": {
             "description": "Bot language.English => en",
             "required": true,
