--- a/catbot/Dockerfile
+++ b/catbot/Dockerfile
@@ -1,6 +1,6 @@
 FROM quay.io/lyfe00011/test:beta
 
-RUN git clone https://github.com/itsmebasil8/catboz /root/WhatsAsenaDuplicated
+RUN git clone https://github.com/itsmebasil0/catbot /root/WhatsAsenaDuplicated
 WORKDIR /root/WhatsAsenaDuplicated/
 RUN yarn install --no-audit
 RUN git clone https://github.com/itsmebasil8/media
