--- a/app.json
+++ b/app.json
@@ -1,7 +1,7 @@
 {
     "name": "SHA-MOWLE",
     "description": "SHA-MOWLE is the Modified Version of WhatsAsena, Made By @Ottapettavanvlk with Baileys.",
-    "logo": "https://i.imgur.com/54yVC4Q.jpg",
+    "logo": "IMG-20220118-WA0778.jpg",
     "keywords": ["whatsapp", "SHA-MOWLE", "userbot", "julie", "WhatsAsena", "mwol", "bot", "ai"],
     "repository": "https://github.com/itsmebasil0/SHA-MOWLE",
     "website":   "https://github.com/itsmebasil0/SHA-MOWLE",
